--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -41,23 +41,23 @@
         <div id="product-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/img/gorra-pikachu.webp" class="d-block w-100" alt="gorra_con_tematica_de_pikachu">
+                    <img src="../assets/img/gorra-pikachu.webp" class="d-block w-100" alt="gorra con tematica de pikachu">
                     <a href="../pages/404.html" class="carousel-caption">Gorra con temática de Pikachu</a>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/img/remera_pikachu.webp" class="d-block w-100" alt="remera_con_tematica_de_pikachu">
+                    <img src="../assets/img/remera-pikachu.webp" class="d-block w-100" alt="remera con tematica de pikachu">
                     <a href="../pages/404.html" class="carousel-caption">Remera con temática de Pikachu</a>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/img/zapatillas_pikachu.webp" class="d-block w-100" alt="zapatillas_con_tematica_de_pikachu">
-                    <a href="../pages/404.html" class="carousel-caption">Zapatillas con temática de Pikachu</a>
+                    <img src="../assets/img/carta-raichu-V.jpg" class="d-block w-100" alt=" Carta Coleccionable de Raichu">
+                    <a href="../pages/404.html" class="carousel-caption">Carta Coleccionable de Raichu</a>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/img/remera_raichu.webp" class="d-block w-100" alt="remera_con_tematica_de_raichu">
+                    <img src="../assets/img/remera-raichu.webp" class="d-block w-100" alt="remera con tematica de raichu">
                     <a href="../pages/404.html" class="carousel-caption">Remera con temática de Raichu</a>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/img/remera_linea_evolutiva_pichu.png" class="d-block w-100" alt="remera_con_tematica_de_linea_evolutiva_de_pichu">
+                    <img src="../assets/img/remera-linea-evolutiva-pichu.png" class="d-block w-100" alt="remera con tematica de linea evolutiva de pichu">
                     <a href="../pages/404.html" class="carousel-caption">Remera con línea evolutiva de Pichu</a>
                 </div>
             </div>
