--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div class="row">
             <div class="col-md-6">
                 <section class="bienvenida">
-                    <h1>Bienvenido a la PikaStore!</h1>
-                    <p> En esta pagina encontraras toda una tienda exclusiva para el pokemon mas conocido y sobrevalorado (con justas razones) Pikachu! y tambien si les interesa, tienen ciertos apartados de su evolucion infravalorada raichu!</p>    
+                    <h1>¡Bienvenido a la PikaStore!</h1>
+                    <p> En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones), Pikachu, ¡y también, si les interesa, tienen ciertos apartados de su evolución infravalorada, Raichu!</p>    
                 </section>
             </div>
             <div class="col-md-6">
@@ -64,10 +64,10 @@
                 <div class="col-md-4">
                     <a href="./pages/informacion_de_contacto.html" class="rayologo">
                         <img src="./assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                        Necesitas ayuda? Contacta al Soporte Electrico!!
+                        ¿Necesitas ayuda? ¡Contacta al Soporte Eléctrico!
                     </a>
                     <div>
-                        <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
+                        <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estética.</p>
                     </div>
                     <a href="./pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                 </div>
@@ -78,8 +78,8 @@
                         <li><a href="./index.html" class="selected">Inicio</a></li>
                         <li><a href="./pages/tienda.html">Tienda</a></li>
                         <li><a href="./pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-                        <li><a href="./pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-                        <li><a href="./pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+                        <li><a href="./pages/informacion_de_contacto.html">Información de Contacto</a></li>
+                        <li><a href="./pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
