--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -27,30 +27,27 @@
             <li><a href="../pages/tienda.html">Tienda</a></li>
             <li><a href="../pages/sobre_nosotros.html" class="selected">Sobre Nosotros</a></li>
             <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
         </ul>
         </nav>
     </header>
     <main class="main container margen-arriba">
         <section class="bienvenida">
-        <h1>Quienes Somos?</h1>
-        <p> Solo somos fanaticos de pokemon que sabe de la popularidad del hamster amarillo electrico mas conocido en el mundo (Si, pikachu es un hamster aunque no lo parezca),
-            y tenemos la meta de que mas gente conozca a pikachu y tenga acceso a todos tipo de productos de el, ademas por si alguien mas aca prefiere a raichu sobre pikachu 
-            (como es el caso del creador de la pagina, que su pokemon favorito es raichu) puedan tener acceso a cosas sobre el, aunque la mayoria de cosas de raichu se desbloquearan comprando la piedra trueno y evolucionando a raichu 
-            debido a que consideramos que raichu tiene mas valor que pikachu!
+        <h1>¿Quiénes somos?</h1>
+        <p> Solo somos fanáticos de Pokémon que sabemos de la popularidad del hámster amarillo eléctrico más conocido en el mundo (Sí, Pikachu es un hámster aunque no lo parezca). Tenemos la meta de que más gente conozca a Pikachu y tenga acceso a todo tipo de productos relacionados con él. Además, por si alguien más aquí prefiere a Raichu sobre Pikachu (como es el caso del creador de la página, cuyo Pokémon favorito es Raichu), puedan tener acceso a cosas sobre él. Aunque la mayoría de cosas de Raichu se desbloquearán comprando la piedra trueno y evolucionando a Raichu, debido a que consideramos que Raichu tiene más valor que Pikachu.
         </p>
         <div class="row">
-        <h1>Cual es nuestro sitio de trabajo?</h1>
+        <h1>¿Cuál es nuestro sitio de trabajo?</h1>
         <div class="col-md-6">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="col-md-6">
-        <h2>Recuerda que si tienes dudas puedes pasarte por la seccion de "informacion de contacto" para contactarnos de un ataque rapido!!</h2>
-        <a href="../pages/informacion_de_contacto.html"><b>CLICK AQUI PARA REDIRIGIRTE A LA SECCION "INFORMACION DE CONTACTO"</b></a>
+        <h2>Recuerda que si tienes dudas, puedes pasarte por la sección de "Información de Contacto" para contactarnos de manera rápida.</h2>
+        <a href="../pages/informacion_de_contacto.html"><b>CLICK AQUÍ PARA REDIRIGIRTE A LA SECCIÓN "INFORMACIÓN DE CONTACTO".</b></a>
        </div>
        </div>
        <div class="margen-arriba"></div>
-        <hr2><b>SELECCION DE LA PIKATV DEL DIA!</b></hr2>
+        <hr2><b>Selección de la PIKATV del día:</b></hr2>
         <div class="margen-arriba2"></div>
         <div class="row">
         <div class="pikatv col-md-6">
@@ -70,10 +67,10 @@
                 <div class="col-md-4">
                     <a href="../pages/informacion_de_contacto.html" class="rayologo">
                         <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                        Necesitas ayuda? Contacta al Soporte Electrico!!
+                        ¿Necesitas ayuda? ¡Contacta al Soporte Eléctrico!
                     </a>
                     <div>
-                        <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
+                        <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estética.</p>
                     </div>
                     <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                 </div>
@@ -84,7 +81,7 @@
                         <li><a href="../pages/tienda.html">Tienda</a></li>
                         <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
                         <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-                        <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+                        <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
