--- a/pages/informacion_de_contacto.html
+++ b/pages/informacion_de_contacto.html
@@ -27,7 +27,7 @@
             <li><a href="../pages/tienda.html">Tienda</a></li>
             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
             <li><a href="../pages/informacion_de_contacto.html" class="selected">Informacion de Contacto</a></li>
-            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
         </ul>
         </nav>
     </header>
@@ -35,8 +35,8 @@
         <section class="bienvenida">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>CONTACTANOS DE UN ATAQUE RAPIDO!</h1>
-                    <h2>Cual es nuestro sitio de trabajo?</h2>
+                    <h1>¡CONTÁCTANOS DE UN ATAQUE RÁPIDO!</h1>
+                    <h2>¿Cuál es nuestro sitio de trabajo?</h2>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1652093.4870695416!2d139.63801375!3d36.0265177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018b60012220e6f%3A0x69d63b267e399f89!2zUmVnacOzbiBkZSBLYW50xY0sIEphcMOzbg!5e0!3m2!1ses!2sar!4v1707800063030!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-6">
@@ -79,13 +79,13 @@
         <section class="bienvenida2 margen-arriba2">
             <div class="row">
                 <div class="col-md-6">
-            <a href="../pages/evoluciona_a_raichu.html">Has pensado en evolucionar a raichu? pikachu parece tener ganas de evolucionar pronto! Click aqui para mas informacion sobre evolucionar de pikachu a raichu!</a>
+            <a href="../pages/evoluciona_a_raichu.html">¿Has pensado en evolucionar a Raichu? ¡Parece que Pikachu tiene ganas de evolucionar pronto! Haz clic aquí para más información sobre cómo evolucionar de Pikachu a Raichu.</a>
             </div>
             <div class="col-md-6">
             <a href="../pages/evoluciona_a_raichu.html"><img src="../assets/img/pikachu-is-evolving.gif" class="gif-pikachu-is-evolving"></a>
             </div>
             <div class="pikatv col-md-6">
-                <h3>SELECCION DE LA PIKATV DEL DIA!!</h3>
+                <h3>Selección de la PIKATV del día:</h3>
                 <video src="../assets/videos/Pokémon-Opening 17-Volt.mp4" class="video2" alt="Pokémon-Opening 17-Volt" controls></video>
             </div>
             <div class="col-md-6 pikachueevee2">
@@ -100,10 +100,10 @@
                     <div class="col-md-4">
                         <a href="../pages/informacion_de_contacto.html" class="rayologo">
                             <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                            Necesitas ayuda? Contacta al Soporte Electrico!!
+                            ¿Necesitas ayuda? ¡Contacta al Soporte Eléctrico!
                         </a>
                         <div>
-                            <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
+                            <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estética.</p>
                         </div>
                         <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                     </div>
@@ -114,7 +114,7 @@
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
                             <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
