--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -27,14 +27,14 @@
             <li><a href="../pages/tienda.html" class="selected">Tienda</a></li>
             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
             <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
         </ul>
         </nav>
     </header>
     <main class="main container margen-arriba">
         <section class="bienvenida">
-        <h1>Bienvenido a la PikaStore!</h1>
-        <p>En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones) Pikachu! Y también, si les interesa, tienen ciertos apartados de su evolución infravalorada Raichu!</p>
+        <h1>¡Bienvenido a la PikaStore!</h1>
+        <p>En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones), Pikachu. ¡Y también, si les interesa, tienen ciertos apartados de su evolución infravalorada, Raichu!</p>
         <h2>¡Ya que estás en la tienda, ¿por qué no miras algunos de nuestros productos?</h2>
     </section>
     <section class="productos">
@@ -73,7 +73,7 @@
     </section>
             <section class="pikasong">
             <h3>
-                Seleccion de la PIKATV del dia!:
+                Seleccion de la PIKATV del dia:
             </h3>
             <video src="../assets/videos/oshi-no-ko-opening-YOASOBI.mp4" class="video" alt="opening de oshi no ko - YOASOBI" controls></video>
             </section>
@@ -84,10 +84,10 @@
                     <div class="col-md-4">
                         <a href="../pages/informacion_de_contacto.html" class="rayologo">
                             <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
-                            Necesitas ayuda? Contacta al Soporte Electrico!!
+                            ¿Necesitas ayuda? ¡Contacta al Soporte Eléctrico!
                         </a>
                         <div>
-                            <p>Todos los derechos de autor reservados para sus respectivos autores, esta pagina es sin animos de lucro, y solamente estetico.</p>
+                            <p>Todos los derechos de autor reservados para sus respectivos autores. Esta página es sin ánimos de lucro y solamente estética.</p>
                         </div>
                         <a href="../pages/sobre_nosotros.html">Preguntas frecuentes</a> 
                     </div>
@@ -97,8 +97,8 @@
                             <li><a href="../index.html" class="selected">Inicio</a></li>
                             <li><a href="../pages/tienda.html">Tienda</a></li>
                             <li><a href="../pages/sobre_nosotros.html">Sobre Nosotros</a></li>
-                            <li><a href="../pages/informacion_de_contacto.html">Informacion de Contacto</a></li>
-                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a raichu</a></li>
+                            <li><a href="../pages/informacion_de_contacto.html">Información de Contacto</a></li>
+                            <li><a href="../pages/evoluciona_a_raichu.html">Evoluciona a Raichu</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
