--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -35,7 +35,7 @@
         <section class="bienvenida">
         <h1>¡Bienvenido a la PikaStore!</h1>
         <p>En esta página encontrarás toda una tienda exclusiva para el Pokémon más conocido y sobrevalorado (con justas razones), Pikachu. ¡Y también, si les interesa, tienen ciertos apartados de su evolución infravalorada, Raichu!</p>
-        <h2>¡Ya que estás en la tienda, ¿por qué no miras algunos de nuestros productos?</h2>
+        <h2>¡Ya que estás en la tienda, ¿por qué no miras algunos de nuestros productos?!</h2>
     </section>
     <section class="productos">
         <div id="product-carousel" class="carousel slide" data-bs-ride="carousel">
