--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienda de productos relacionados hacia pikachu y raichu no oficial y completamente estetica creada para un proyecto de estudios sobre desarollo web.">
+    <meta name="keywords" content="Pikachu, Raichu, Pokemon, Productos, Tienda Pikachu, Accesorios, Ropa, Productos Pikachu, Productos Raichu, Tienda Raichu, Accesorios Pikachu, Accesorios Raichu, Ropa Pikachu, Ropa Raichu">
+    <title>PikaStore | Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <title>PikaStore</title>
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/estilos.css">
     <script defer src="./js/mobile.js"></script>
