--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ubicacion y informacion de la sede principal de la tienda no oficial Sobre pikachu llamada PikaStore, con Pikatv incluido">
+    <meta name="keywords" content="Local PikaStore, Tiendas fisicas, Bienvenido a Kanto">
+    <title>PikaStore | Quienes somos y donde estamos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <title>PikaStore</title>
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/estilos.css">
     <script defer src="../js/mobile.js"></script>
