--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <a href="../pages/informacion_de_contacto.html" class="rayologo">
-                            <img src="../assets/img/system-regular-117-bolt (1).gif" alt="logo_de_rayo_en_movimiento" />
+                            <img src="../assets/img/system-regular-117-bolt.gif" alt="logo_de_rayo_en_movimiento" />
                             ¿Necesitas ayuda? ¡Contacta al Soporte Eléctrico!
                         </a>
                         <div>
