--- a/pages/evoluciona_a_raichu.html
+++ b/pages/evoluciona_a_raichu.html
@@ -37,7 +37,7 @@
         <section class="bienvenida2">
         <h1>¡VEO QUE TE DECIDISTE POR COMPRAR UNA PIEDRA TRUENO! ¡GENIAL, ESTÁS A UN SOLO PASO DE EVOLUCIONAR A RAICHU!</h1>
         <h1> 
-            <a href="../pages/404.html" class="link-rojo">para evolucionar a Raichu es tan simple como seguirnos y unirte a nuestro Patreon. Acto seguido debes registrar tu email en el cuadro blanco de aqui abajo. ¡Haz clic aquí para unirte a nuestro Patreon y evolucionar a Raichu!</a>
+            <a href="../pages/404.html" class="link-rojo">Para evolucionar a Raichu es tan simple como seguirnos y unirte a nuestro Patreon. Acto seguido debes registrar tu email en el cuadro blanco de aqui abajo. ¡Haz clic aquí para unirte a nuestro Patreon y evolucionar a Raichu!</a>
         </h1>
         <div class="container">
             <form action="../pages/404.html">
